<resources>
    <string name="app_name">成功大學多媒體人機通訊實驗室</string>

    <string name="hello_world">Hello world!</string>

    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
	
	<string name="wello">wello</string>
    <string name="alarm">鬧鐘</string>
    <string name="login">登入</string>
    <string name="email">信箱</string>
    <string name="password">密碼</string>

    <string name="action_login">登錄</string>

    <string name="stn_changetime">更改時間</string>
    <string name="stn_chooseweek">選擇星期</string>
    <string name="stn_chooseday">選擇一日</string>
    <string name="stn_today">今天</string>
    <string name="stn_now">現在</string>
    <string name="stn_week">星期</string>
    <string name="stn_confirmation_txt">你想要退出，不儲存?</string>
    <string name="stn_confirmation">確認</string>
    <string name="stn_save_alarm">儲存</string>
    <string name="stn_quit_without_saving">退出</string>

    <string name="stn_note_once">若只想響一次，請不要選擇星期</string>
    <string name="stn_note_noweek">如果你不選擇星期，那麼鬧鐘將每週響起。</string>

    <string name="stn_create">保留</string>
    <string name="stn_cancel">取消</string>

    <string name="mon">一</string>
    <string name="tue">二</string>
    <string name="wed">三</string>
    <string name="thu">四</string>
    <string name="fri">五</string>
    <string name="sat">六</string>
    <string name="sun">日</string>

    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期日</string>

    <string name="once">一次</string>
    <string name="everyday">每天</string>
    <string name="weekends">周末</string>
    <string name="weekdays">平日</string>

    <string name="ev">偶</string>
    <string name="od">奇</string>

    <string name="even">偶數</string>
    <string name="odd">奇數</string>
    <string name="everyweek">每週</string>

    <string name="log_in">登入</string>
    <string name="sign_up">註冊</string>
    <string name="welcome">歡迎!</string>
    <string name="alarm_turnon">回答問題</string>
    <string name="alarm_turnoff">關閉鬧鐘</string>
    <string name="alarm_setaside">延後5分鐘</string>
    <string name="off">關閉</string>
    <string name="on">開啟</string>
    <string name="edit">編輯</string>
    <string name="delete">刪除</string>
    <string name="no_alarms">沒有任何鬧鐘，要新增一個嗎?</string>
    <string name="not_found">[day not found]</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="alarm_settings">新的鬧鐘</string>

    <string name="angry">生氣</string>
    <string name="boredom">無聊</string>
    <string name="disgust">厭惡</string>
    <string name="anxiety">焦慮</string>
    <string name="happiness">開心</string>
    <string name="sadness">難過</string>
    <string name="surprised">驚訝</string>

</resources>
