<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/linearLayout"
    android:background="@drawable/tree">

    <TextView
        android:id="@+id/alarmact_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-condensed"
        android:textSize="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:layout_conversion_absoluteHeight="86dp"
        tools:layout_conversion_absoluteWidth="141dp"
        tools:text="16:00" />

    <TextView
        android:id="@+id/alarmact_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarmact_time"
        tools:layout_conversion_absoluteHeight="32dp"
        tools:layout_conversion_absoluteWidth="165dp"
        tools:text="鬧鐘名稱" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/close_question"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:backgroundTint="@color/colorAccent"
        android:onClick="onAlarmTurnOnClick"
        android:text="@string/alarm_turnon"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_conversion_absoluteHeight="95dp"
        tools:layout_conversion_absoluteWidth="200dp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/close"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:backgroundTint="@color/colorAccent"
        android:onClick="onAlarmTurnOffClick"
        android:text="@string/alarm_turnoff"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/test"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_conversion_absoluteHeight="75dp"
        tools:layout_conversion_absoluteWidth="200dp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/test"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:enabled="true"
        android:onClick="onAlarmSetAsideClick"
        android:text="@string/alarm_setaside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_conversion_absoluteHeight="55dp"
        tools:layout_conversion_absoluteWidth="200dp" />


</android.support.constraint.ConstraintLayout>
