<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:background="?android:attr/selectableItemBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/videoCancel"
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/shap_oval"
                android:text="X" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <VideoView
                    android:id="@+id/video_view_dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/angry" />

                    <TextView
                        android:id="@+id/angrytv"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/angry" />

                    <SeekBar
                        android:id="@+id/Angry"
                        style="@style/Widget.AppCompat.SeekBar.Discrete"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:max="3"
                        android:progress="0" />

                    <TextView
                        android:id="@+id/angryValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center_vertical"
                        android:text="0"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/boredom" />

                    <TextView
                        android:id="@+id/boredomtv"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/boredom" />

                    <SeekBar
                        android:id="@+id/Boredom"
                        style="@style/Widget.AppCompat.SeekBar.Discrete"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:max="3"
                        android:progress="0" />

                    <TextView
                        android:id="@+id/boredomValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center_vertical"
                        android:text="0"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/disgust" />

                    <TextView
                        android:id="@+id/disgusttv"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/disgust" />

                    <SeekBar
                        android:id="@+id/Disgust"
                        style="@style/Widget.AppCompat.SeekBar.Discrete"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:max="3"
                        android:progress="0" />

                    <TextView
                        android:id="@+id/disgustValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center_vertical"
                        android:text="0"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/anxiety" />

                    <TextView
                        android:id="@+id/anxietytv"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/anxiety" />

                    <SeekBar
                        android:id="@+id/Anxiety"
                        style="@style/Widget.AppCompat.SeekBar.Discrete"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:max="3"
                        android:progress="0" />

                    <TextView
                        android:id="@+id/anxietyValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center_vertical"
                        android:text="0"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/happiness" />

                    <TextView
                        android:id="@+id/happinesstv"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/happiness" />

                    <SeekBar
                        android:id="@+id/Happiness"
                        style="@style/Widget.AppCompat.SeekBar.Discrete"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:max="3"
                        android:progress="0" />

                    <TextView
                        android:id="@+id/happinessValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center_vertical"
                        android:text="0"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/sadness" />

                    <TextView
                        android:id="@+id/sadnesstv"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/sadness" />

                    <SeekBar
                        android:id="@+id/Sadness"
                        style="@style/Widget.AppCompat.SeekBar.Discrete"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:max="3"
                        android:progress="0" />

                    <TextView
                        android:id="@+id/sadnessValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center_vertical"
                        android:text="0"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/surprised" />

                    <TextView
                        android:id="@+id/surprisedtv"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/surprised" />

                    <SeekBar
                        android:id="@+id/Surprised"
                        style="@style/Widget.AppCompat.SeekBar.Discrete"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:max="3"
                        android:progress="0" />

                    <TextView
                        android:id="@+id/surprisedValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center_vertical"
                        android:text="0"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                </LinearLayout>

                <Button
                    android:id="@+id/videobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/emtioneditText"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="14dp"
                    android:text="發布" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>